--- a/Forest Plot.Rmd
+++ b/Forest Plot.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Homework 5 - BSTA 513"
-author: "Matthew Hoctor"
-date: "5/18/2021"
+title: "Forest Plot - EPI 514"
+author:
+  -Matthew Hoctor^[OHSU-PSU School of Public Health]
+  -Colin Hawkinson^[OHSU-PSU School of Public Health]
+date: "5/31/2021"
 output:
   html_document:
     number_sections: no
@@ -36,6 +38,42 @@ knitr::opts_chunk$set(echo = TRUE)
 #library(gtsummary)
 #library(mfp)
 #library(linearspline)
+library(forestplot)
 ```
 
-# Q1
+# Forest Plot
+
+```{r}
+cochrane_from_rmeta <- 
+  structure(list(
+    mean  = c(NA, NA, 0.578, 0.165, 0.246, 0.700, 0.348, 0.139, 1.017, NA, 0.531), 
+    lower = c(NA, NA, 0.372, 0.018, 0.072, 0.333, 0.083, 0.016, 0.365, NA, 0.386),
+    upper = c(NA, NA, 0.898, 1.517, 0.833, 1.474, 1.455, 1.209, 2.831, NA, 0.731)),
+    .Names = c("mean", "lower", "upper"), 
+    row.names = c(NA, -11L), 
+    class = "data.frame")
+
+tabletext <- cbind(
+  c("", "Study", "Auckland", "Block", 
+    "Doran", "Gamsu", "Morrison", "Papageorgiou", 
+    "Tauesch", NA, "Summary"),
+  c("Deaths", "(steroid)", "36", "1", 
+    "4", "14", "3", "1", 
+    "8", NA, NA),
+  c("Deaths", "(placebo)", "60", "5", 
+    "11", "20", "7", "7", 
+    "10", NA, NA),
+  c("", "OR", "0.58", "0.16", 
+    "0.25", "0.70", "0.35", "0.14", 
+    "1.02", NA, "0.53"))
+
+forestplot(tabletext, 
+           cochrane_from_rmeta,new_page = TRUE,
+           is.summary = c(TRUE,TRUE,rep(FALSE,8),TRUE),
+           clip = c(0.1,2.5), 
+           xlog = TRUE, 
+           col = fpColors(box = "royalblue",
+                          line = "darkblue",
+                          summary = "royalblue"))
+```
+
