added horizontal line

--- a/Forest Plot.Rmd
+++ b/Forest Plot.Rmd
@@ -62,6 +62,7 @@ forestplot(tabletext,
            cochrane_from_rmeta$mean,
            cochrane_from_rmeta$lower,
            cochrane_from_rmeta$upper,
+           hrzl_lines = gpar(col = "#444444"),
            new_page = TRUE,
            is.summary = c(TRUE,rep(FALSE,15)),
            clip = c(0.5,15), 
