--- a/Forest Plot.Rmd
+++ b/Forest Plot.Rmd
@@ -63,6 +63,7 @@ forestplot(tabletext,
            cochrane_from_rmeta$lower,
            cochrane_from_rmeta$upper,
            hrzl_lines = gpar(col = "#444444"),
+           graphwidth = "auto",
            new_page = TRUE,
            is.summary = c(TRUE,rep(FALSE,15)),
            clip = c(0.5,15), 
