--- a/Forest Plot.Rmd
+++ b/Forest Plot.Rmd
@@ -55,7 +55,7 @@ cochrane_from_rmeta <-
     class = "data.frame")
 
 tabletext <- cbind(
-  c("Study","Baek et al.","   On-call work vs Insomnia or sleep difficulties","Chung et al.","   3 consecutive night shifts vs Insomnia","   Short recovery periods between shifts vs Insomnia","Karhula et al.","   On-call work vs Sleep difficulties (German)","   On-call work vs sleep difficulties (Finnish)","Lee et al.","   On-call work vs Insomnia or sleep difficulties","Zhang et al.","   Other shift work vs sleep disorder","   2-shift work vs sleep disorder","   3-shift work vs sleep disorder","   4-shift work vs sleep disorder"),
+  c("Study","Baek et al.","   On-call work vs insomnia or sleep difficulties","Chung et al.","   3 consecutive night shifts vs insomnia","   Short recovery periods between shifts vs insomnia","Karhula et al.","   On-call work vs sleep difficulties (German)","   On-call work vs sleep difficulties (Finnish)","Lee et al.","   On-call work vs insomnia or sleep difficulties","Zhang et al.","   Other shift work vs sleep disorder","   2-shift work vs sleep disorder","   3-shift work vs sleep disorder","   4-shift work vs sleep disorder"),
   c("OR","","1.68","","2.33","2.01","","1.51","0.92","","1.56","","3.88","3.11","2.87","2.22"))
 
 forestplot(tabletext, 
